[package]
name = "moshi-webrtc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8.1", features = ["ws"] }
base64 = "0.21.7"
candle = { version = "0.8.3", package = "candle-core" }
candle-nn = "0.8.3"
candle-transformers = "0.8.3"
clap = { version = "4.4.12", features = ["derive"] }
hf-hub = { version = "0.3.2", features = ["tokio"] }
hyper = "1.3.1"
kaudio = "0.2.0"
lazy_static = "1.5.0"
moshi = "0.5.2"
opus = "0.3.0"
rand = { version = "0.8.5", features = ["getrandom"] }
regex = "1.10.3"
rubato = "0.15.0"
sentencepiece = "0.11.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.115"
toml = "0.8.19"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
webrtc = "0.12.0"

[profile.release]
debug = true

[profile.release-no-debug]
inherits = "release"
debug = false

[features]
default = []
cuda = ["moshi/cuda", "candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["moshi/metal", "candle/metal", "candle-nn/metal", "candle-transformers/metal"]

